Bug 261754 - GLContextX11.cpp:89:66: error: invalid cast from type 'long unsigned int' to type 'EGLNativePixmapType' {aka 'unsigned int'}
Summary: GLContextX11.cpp:89:66: error: invalid cast from type 'long unsigned int' to ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: WebKit Nightly Build
Hardware: PC Linux
: P2 Normal
Assignee: Michael Catanzaro
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-19 10:21 PDT by Michael Catanzaro
Modified: 2023-09-19 11:35 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Catanzaro 2023-09-19 10:21:17 PDT
WebKitGTK 2.42.0 fails to build on i686:

../Source/WebCore/platform/graphics/egl/GLContextX11.cpp: In static member function 'static std::unique_ptr<WebCore::GLContext> WebCore::GLContext::createPixmapContext(WebCore::PlatformDisplay&, EGLContext)':
../Source/WebCore/platform/graphics/egl/GLContextX11.cpp:89:66: error: invalid cast from type 'long unsigned int' to type 'EGLNativePixmapType' {aka 'unsigned int'}
   89 |     EGLSurface surface = eglCreatePixmapSurface(display, config, reinterpret_cast<EGLNativePixmapType>(pixmap.get()), 0);
      |                                                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Comment 1 Michael Catanzaro 2023-09-19 10:23:09 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17923
Comment 2 EWS 2023-09-19 11:35:08 PDT
Committed 268137@main (356c9d5d33e0): <https://commits.webkit.org/268137@main>

Reviewed commits have been landed. Closing PR #17923 and removing active labels.