GLContextX11.cpp:89:66: error: invalid cast from type 'long unsigned int' to type 'EGLNativePixmapType' {aka 'unsigned int'} https://bugs.webkit.org/show_bug.cgi?id=261754

Unreviewed build fix.

As usual, we need to use C-style casts with EGL types.

* Source/WebCore/platform/graphics/egl/GLContextX11.cpp:
(WebCore::GLContext::createPixmapContext):

Canonical link: https://commits.webkit.org/268137@main