Source/WebCore/platform/graphics/egl/GLContextX11.cpp
@@ -86,7 +86,7 @@ std::unique_ptr<GLContext> GLContext::createPixmapContext(PlatformDisplay& platf
     // swap buffers. So, we use a custom XError handler here that ignores BadDrawable errors and only warns about any other
     // errors without aborting in any case.
     XErrorTrapper trapper(x11Display, XErrorTrapper::Policy::Warn, { BadDrawable });
-    EGLSurface surface = eglCreatePixmapSurface(display, config, reinterpret_cast<EGLNativePixmapType>(pixmap.get()), 0);
+    EGLSurface surface = eglCreatePixmapSurface(display, config, (EGLNativePixmapType)pixmap.get(), 0);
     if (surface == EGL_NO_SURFACE) {
         eglDestroyContext(display, context);
         return nullptr;
